2011-09-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/cart.txt, DOC/USAGE, atari800.man, cartridge.[ch], ui.c: Added support
  for Atrax SDX 64/128K cartridge mapping.

* cartridge.c: Fixed a bug in OSS 034M/043M mappings - the area filled by $FF
  should be $A000-$AFF instead of $8000-$9FFF.


2011-09-04  Kostas Nakos  <knakos@gmail.com>
* android/*: Added paddle emulation


2011-09-03  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Code cleanup - split MONITOR_Run() into separate functions for
  each monitor command. Functionality unchanged.

* af80.[ch], antic.[ch], cartridge.[ch], cpu.c, gtia.[ch], ide.[ch],
  memory.[ch], monitor.c, pbi_bb.[ch], pbi_mio.[ch], pbi_proto80.[ch],
  pbi.[ch], pia.[ch], pokey.[ch]: Added option of reading hardware memory
  without side effects. Used this in the, monitor so now eg. the "M" option
  doesn't switch cartridge banks while displaying page $D5. Fixed the
  monitor's "disassemble" functionality - it didn't correctly disassemble code
  in hardware memory.


2011-09-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Swapped mapping of right and middle mouse buttons, to make it
  identical to the X11 and Win32 ports.


2011-08-24  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for a 32 KB cartridge format used by Atari Super Turbo Multi-Cartridge.

* cfg.c, rtime.[ch]: Support for saving the state of R-Time 8 in config file.

* atari800.man: Improve formatting (bold, italic etc.), mainly according to
  man-pages(7).


2011-08-06  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* afile.c: Fixed compilation errors for --target=basic introduced on
  2011-06-27.


2011-08-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOS/cart.txt, DOC/USAGE, cartridge.[ch], ui.c: Added support for the
  Blizzard-type 4KB cartridge (which contains a 2732 EPROM inside).


2011-07-23  Kostas Nakos  <knakos@gmail.com>
* atari.c: Use FPS defines in autoframeskip