@@ -128,12 +128,12 @@ Command line options
 -basic                Turn on Atari BASIC ROM
 
 -cart <filename>      Insert cartridge (CART or raw format)
--cart-type <0..49>    Select type of cartridge inserted with -cart. 0 means
+-cart-type <0..51>    Select type of cartridge inserted with -cart. 0 means
                       no cartridge, and other values indicate a specific
                       cartridge type as in cart.txt.
 -cart2 <filename>     Insert second cartridge (CART or raw format)
                       Only if first cartridge is SpartaDOS X (64 or 128)
--cart2-type <0..49>   Similar to -cart-type. Select type of cartridge inserted
+-cart2-type <0..51>   Similar to -cart-type. Select type of cartridge inserted
                       with -cart2.
 -cart-autoreboot      Automatically reboot after cartridge inserting/removing
                       (doesn't affect the piggyback cartridge)
