@@ -55,7 +55,9 @@ enum { CARTRIDGE_UNKNOWN        = -1,
        CARTRIDGE_AST_32         = 47,
        CARTRIDGE_ATRAX_SDX_64   = 48,
        CARTRIDGE_ATRAX_SDX_128  = 49,
-       CARTRIDGE_LAST_SUPPORTED = 49
+       CARTRIDGE_TURBOSOFT_64   = 50,
+       CARTRIDGE_TURBOSOFT_128  = 51,
+       CARTRIDGE_LAST_SUPPORTED = 51
 };
 
 #define CARTRIDGE_MAX_SIZE	(1024 * 1024)
